src/styles/quasar.styl
@import './quasar.variables'
@import '~quasar-styl'
// @import '~quasar-addon-styl'

.w-100 {
  width: 100%;
}
.card-hover {
	&:hover{
  background: #f1f1f1; 
	}
}
.calculator-cards {
  background-color: white;
  padding: 20px;
  height: 290px;
  border: 1px solid #E0E0E0;
}
a.router-link-active {
  color: black;
}
.q-card-title { 
  color: black;
  font-weight:bold;
  line-height: 1.5rem;
}
.header-app-name {
  position: relative;
  bottom: 2px;
  font-style: italic;
  font-family: roboto;
  font-size: 1.7em;
}
.icon {
  width:40px;
  height:40px;
  background-color: black;
  -webkit-mask: url(../assets/logo.svg) no-repeat center;
}
.position-right {
  position: flex; 
  float:right;
}
.q-layout-header {
  background-color:white;
  border-bottom :0;
}
.q-layout-drawer{
  border-left: 1px solid #E0E0E0;
}
.search-style{
  padding: 12px;
  background: white;
  border: 1px solid #36454F;
  border-radius: 30px;
}
.drawer-icon{
  font-size: 1.5em;
}
.border-top {
  border-top: 1px solid #E0E0E0;
}
.query{
@media only screen and (max-width: 768px) {
  padding-top:0;
  border-bottom: 1px solid #E0E0E0;
  }
}

